# AI-in-mental-health-support

./: .gitignore  AI_mental_health_interactions.csv  README.md  pyproject.toml  requirements.txt
analysis/: 00_run_all.py  01_data_overview.py  02_emotions_and_followup.py  03_shifts_transitions_risk.py  04_build_story.py  05_export_html.py  06_export_appendix.py  __init__.py  _bootstrap.py
src/aihms/: __init__.py  data.py  viz.py
